syntax = "proto3";

option csharp_namespace = "Galaxy.Auth.Grpc";

package Permissions;

// The greeting service definition.
service Permissions {
  // Sends a greeting
  rpc AddPermission (stream PermissionRequest) returns (PermissionReply);
  rpc RemovePermission (stream PermissionRequest) returns (PermissionReply);
}

// The request message containing the user's name.
message PermissionRequest {
  int32 userId = 1;
  int32 permission =2;
}

// The response message containing the greetings.
message PermissionReply {
  bool success = 1;
}
