syntax = "proto3";

option csharp_namespace = "Galaxy.Auth";

package GrpcAuth;
import "Protos/commonModels.proto";

// The permissions service definition.
service Permissions {
  rpc AddPermission (stream PermissionRequest) returns (CommonModels.ActionReplay);
  rpc RemovePermission (stream PermissionRequest) returns (CommonModels.ActionReplay);
  rpc GetPermissions (UserPermissionRequest) returns (stream UserPermissionReplay);
}

// The request message containing the user's name.
message PermissionRequest {
  int32 userId = 1;
  int32 permission =2;
}

// the request for getting user's permissions
message UserPermissionRequest{
   int32 id =1;
}

// the result for permissions request
message UserPermissionReplay{
   int32 permission =1;
}

